Mon May 16 17:24:28 2005  Tim Janik  <timj@gtk.org>

	* bstusermessage.h, bstusermessage.c: API cleanups. define BstMessage
	and BstMsgType which are used as canonical message representation
	internally now.
	display details through a GtkLabel which doesn't have the size-request
	problems of a scroll text. added bst_message_dialog_elist() to pop up
	message dialogs. 

Sun May 15 16:21:13 2005  Tim Janik  <timj@gtk.org>

	* configure.in: pass --no-undefined to the linker if devel rules are
	enabled and we're building without toyprof (toyprof uses _r_debug).

Sun May 15 15:51:13 2005  Tim Janik  <timj@gtk.org>

	* configure.in: added --enable-toyprof option, defaulting to no.

Sat May 14 21:03:47 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c:
	* beast-gtk/bstusermessage.c:
	* tools/bsewavetool.cc: minor API adaptions.

Fri May 13 11:51:00 2005  Inaki Larranaga  <dooteo@euskalgnu.org>

	* configure.in: Added "eu" (Basque) to ALL_LINGUAS.

Thu May 12 00:11:44 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstapp.c: issue a warning when closing the window
	of a dirty project and prevent window closing.

	* beast-gtk/bstusermessage.c, beast-gtk/bstusermessage.h:
	handle rich log messages properly.

	* beast-gtk/gxk/gxkdialog.c: set the default widget also
	as focus widget if none was specified. otheriwse the default 
	widget setting may not properly take effect.

	* beast-gtk/gxk/gxkutils.h, beast-gtk/gxk/gxkutils.c:
	added gxk_label_set_attributes(), based on 
	gimp_label_set_attributes().

	* tools/bsewavetool.cc: adapt log message handler.

Wed May 11 14:55:44 2005  Tim Janik  <timj@gtk.org>

	* beast-gtk/bstfiledialog.h, beast-gtk/bstfiledialog.c:
	properly handle "Save" case (as opposed to "Save As").
	when saving, project files may be overwritten. don't pop
	up file selection dialog if the project already was saved.
	preserve fully-include-waves/store-references for projects.

	* beast-gtk/bstbseutils.h, beast-gtk/bstbseutils.c: